Perkin-UAT/force-app/main/default/objects/Sales_Volume_Requirement__c/Sales_Volume_Requirement__c.object-meta.xml
<CustomObject>
    <label>Sales Volume Requirement</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Sales Volume Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Volume Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>