Perkin-UAT/force-app/main/default/objects/Sales_Volume_Requirement__c/fields/Apts_Currency__c.field-meta.xml
<CustomField>
    <fullName>Apts_Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australian Dollar (AUD)</fullName>
            </value>
            <value>
                <fullName>Canadian Dollar (CAD)</fullName>
            </value>
            <value>
                <fullName>Swiss Franc (CHF)</fullName>
            </value>
            <value>
                <fullName>Danish Krone (DKK)</fullName>
            </value>
            <value>
                <fullName>Euro (EUR)</fullName>
            </value>
            <value>
                <fullName>British Pound (GBP)</fullName>
            </value>
            <value>
                <fullName>Hong Kong Dollar (HKD)</fullName>
            </value>
            <value>
                <fullName>Japanese Yen (JPY)</fullName>
            </value>
            <value>
                <fullName>Korean Won (KRW)</fullName>
            </value>
            <value>
                <fullName>Malaysian Ringgit (MYR)</fullName>
            </value>
            <value>
                <fullName>Norwegian Krone (NOK)</fullName>
            </value>
            <value>
                <fullName>Pilippine Peso (PJP)</fullName>
            </value>
            <value>
                <fullName>Polish Zloty (PLN)</fullName>
            </value>
            <value>
                <fullName>Swedish Krona (SEK)</fullName>
            </value>
            <value>
                <fullName>Singapore Dollar (SGD)</fullName>
            </value>
            <value>
                <fullName>Thai Baht (THB)</fullName>
            </value>
            <value>
                <fullName>Taiwan Dollar (TWD)</fullName>
            </value>
            <value>
                <fullName>South African Rand (ZAR)</fullName>
            </value>
            <value>
                <fullName>United States Dollar (USD)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>