Perkin-UAT/force-app/main/default/objects/Sales_Volume_Requirement__c/fields/Apts_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Apts_Product_Line__c</fullName>
    <label>Product Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATOMIC ABSORPTION SPECTROSCOPY (AA)</fullName>
            </value>
            <value>
                <fullName>APPLICATION SYSTEMS (APS)</fullName>
            </value>
            <value>
                <fullName>ANALYTICAL PROTEOMICS (ANP)</fullName>
            </value>
            <value>
                <fullName>AUTO ROBOTIC SYSTEMS (ARS)</fullName>
            </value>
            <value>
                <fullName>aSi-GE (ASG)</fullName>
            </value>
            <value>
                <fullName>aSi-PKI (ASP)</fullName>
            </value>
            <value>
                <fullName>AUTOMATED WORKSTATIONS (AWS)</fullName>
            </value>
            <value>
                <fullName>CALIPER LIQUID HANDLING (CLH)</fullName>
            </value>
            <value>
                <fullName>CALIPER REAGENTS (CLR)</fullName>
            </value>
            <value>
                <fullName>CUSTOM MANUFACTURING (CMG)</fullName>
            </value>
            <value>
                <fullName>DEXELA - CMOS (CMS)</fullName>
            </value>
            <value>
                <fullName>CELLULAR SCRN &amp; ADME (CSA)</fullName>
            </value>
            <value>
                <fullName>DIAGNOSTICS (DIA)</fullName>
            </value>
            <value>
                <fullName>DISTRIB PROD/OTHERLS (DIS)</fullName>
            </value>
            <value>
                <fullName>DNA MEASUREMENTS (DNA)</fullName>
            </value>
            <value>
                <fullName>ENTERPRISE SW SOLUTION (ESS)</fullName>
            </value>
            <value>
                <fullName>FLOUR AGENTS PORTFOLIO (FAP)</fullName>
            </value>
            <value>
                <fullName>FUNCTIONAL GENOM &amp; PROTEOM (FGP)</fullName>
            </value>
            <value>
                <fullName>GAS CROMATOGRAPHY (GC)</fullName>
            </value>
            <value>
                <fullName>HIGH CONTENT SCREENING (HCS)</fullName>
            </value>
            <value>
                <fullName>SCREENING REAGENTS (HTS)</fullName>
            </value>
            <value>
                <fullName>IMAGING &amp; ANALYSIS SOLN (IAS)</fullName>
            </value>
            <value>
                <fullName>INDUCTIVELY COUPLED (ICP)</fullName>
            </value>
            <value>
                <fullName>IN VIVO IMAGING (INV)</fullName>
            </value>
            <value>
                <fullName>IR SPECTROSCOPY (IR)</fullName>
            </value>
            <value>
                <fullName>LIQUID CHROMATOGRAPH (LC)</fullName>
            </value>
            <value>
                <fullName>LC MASS SPEC (LCM)</fullName>
            </value>
            <value>
                <fullName>INDUCTIVELY COUPLED (MAS)</fullName>
            </value>
            <value>
                <fullName>MOLECULAR DIAGNOSTIC (MDX)</fullName>
            </value>
            <value>
                <fullName>MICROFLUIDICS TECH (MFT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>