Perkin-UAT/force-app/main/default/objects/Sales_Volume_Requirement__c/fields/Apts_Product_Line_Print__c.field-meta.xml
<CustomField>
    <fullName>Apts_Product_Line_Print__c</fullName>
    <description>To fill</description>
    <label>Product Line Print</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>