Perkin-UAT/force-app/main/default/objects/Sales_Volume_Requirement__c/fields/Sales_Volume_Currency__c.field-meta.xml
<CustomField>
    <fullName>Sales_Volume_Currency__c</fullName>
    <label>Sales Volume (Currency)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>