Perkin-UAT/force-app/main/default/objects/Sales_Volume_Requirement__c/fields/Sales_Volume_Units__c.field-meta.xml
<CustomField>
    <fullName>Sales_Volume_Units__c</fullName>
    <label>Sales Volume (Units)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>